--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-query-devtools": "^5.83.0",
+    "@types/nodemailer": "^6.4.17",
     "@uploadthing/react": "^7.3.2",
     "arctic": "^3.7.0",
     "class-variance-authority": "^0.7.1",
@@ -58,6 +59,7 @@
     "next": "15.3.5",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.4",
+    "nodemailer": "^7.0.5",
     "prisma": "^6.11.1",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
